--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "python.pythonPath": "/usr/local/bin/python3",
     "cSpell.ignoreWords": [
+        "customisation",
         "hlbox"
     ]
 }
