--- a/package.json
+++ b/package.json
@@ -6,9 +6,21 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "axios": "^0.21.1",
     "gsap": "^3.6.0",
+    "photoswipe": "^4.1.3",
     "react": "^16.13.1",
+    "react-awesome-lightbox": "^1.8.0",
+    "react-bnb-gallery": "^1.4.4",
     "react-dom": "^16.13.1",
+    "react-helmet": "^6.1.0",
+    "react-images": "^0.6.7",
+    "react-images-viewer": "^1.6.2",
+    "react-medium-image-zoom": "^3.1.3",
+    "react-photoswipe": "^1.3.0",
+    "react-photoswipe-gallery": "^1.3.6",
+    "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.1"
   },
   "scripts": {
