--- a/package.json
+++ b/package.json
@@ -10,18 +10,14 @@
     "gsap": "^3.6.0",
     "photoswipe": "^4.1.3",
     "react": "^16.13.1",
-    "react-awesome-lightbox": "^1.8.0",
-    "react-bnb-gallery": "^1.4.4",
     "react-dom": "^16.13.1",
+    "react-gsap": "^3.2.1",
     "react-helmet": "^6.1.0",
-    "react-images": "^0.6.7",
-    "react-images-viewer": "^1.6.2",
-    "react-medium-image-zoom": "^3.1.3",
-    "react-photoswipe": "^1.3.0",
     "react-photoswipe-gallery": "^1.3.6",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "^4.0.1"
+    "react-scripts": "^4.0.1",
+    "react-with-breakpoints": "^4.0.4"
   },
   "scripts": {
     "start": "react-scripts start",
