--- a/.github/workflows/do-deploy.yml
+++ b/.github/workflows/do-deploy.yml
@@ -17,5 +17,5 @@ jobs:
           script: |
             mkdir testx 
             cd testx 
-            git clone git@github.com:Mulubwa17/ci-cd-to-digitalocean-with-github-actions.git 
+            gh repo clone ViktorDyukov/portfolio-frontend
             echo 'Deployment successful to digital ocean'
