--- a/.github/workflows/do-deploy.yml
+++ b/.github/workflows/do-deploy.yml
@@ -17,5 +17,5 @@ jobs:
           script: |
             mkdir testx 
             cd testx 
-            gh repo clone ViktorDyukov/portfolio-frontend
+            git clone git@github.com:ViktorDyukov/portfolio-frontend.git 
             echo 'Deployment successful to digital ocean'
