--- a/.github/workflows/do-deploy.yml
+++ b/.github/workflows/do-deploy.yml
@@ -15,7 +15,10 @@ jobs:
           username: ${{ secrets.SSH_USERNAME }}
 
           script: |
-            mkdir testx 
-            cd testx 
+            mkdir temp_fe 
+            cd temp_fe 
             git clone git@github.com:ViktorDyukov/portfolio-frontend.git 
-            echo 'Deployment successful to digital ocean'
+            rm /home/react/portfolio-frontend-build/*.*
+            cp -r portfolio-frontend/build/ /home/react/portfolio-frontend-build/
+            cd ..
+            rm -r temp_fe
