--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "photoswipe": "^4.1.3",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-ga": "^3.3.0",
     "react-gsap": "^3.2.1",
     "react-helmet": "^6.1.0",
     "react-photoswipe-gallery": "^1.3.6",
