--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^12.0.0",
     "@testing-library/user-event": "^13.2.1",
     "axios": "^0.21.1",
+    "ga-4-react": "^0.1.281",
     "gsap": "^3.7.1",
     "photoswipe": "^4.1.3",
     "react": "^17.0.2",
