--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "axios": "^0.21.1",
     "ga-4-react": "^0.1.281",
     "gsap": "^3.7.1",
+    "js-cookie": "^3.0.1",
     "photoswipe": "^4.1.3",
     "react": "^17.0.2",
+    "react-cookie": "^4.1.1",
     "react-dom": "^17.0.2",
     "react-ga": "^3.3.0",
     "react-gsap": "^3.2.1",
