--- a/package.json
+++ b/package.json
@@ -16,8 +16,11 @@
     "react-cookie": "^4.1.1",
     "react-dom": "^17.0.2",
     "react-ga": "^3.3.0",
+    "react-google-slides": "^3.1.1",
     "react-gsap": "^3.2.1",
     "react-helmet": "^6.1.0",
+    "react-hotkeys": "^2.0.0",
+    "react-modal": "^3.14.3",
     "react-photoswipe-gallery": "^1.3.6",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
