--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-gsap": "^3.2.1",
     "react-helmet": "^6.1.0",
     "react-hotkeys": "^2.0.0",
+    "react-hotkeys-hook": "^3.4.3",
     "react-modal": "^3.14.3",
     "react-photoswipe-gallery": "^1.3.6",
     "react-router": "^5.2.0",
